<resources>
    <string name="app_name">Bla Bla Wild</string>
    <string name="search_text">Rechercher</string>
    <string name="departure">Départ</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="action_settings">Settings</string>
    <string name="Toast">Merci de remplir le lieu de départ et/ou la destination</string>
    <string name="NoDate">Aucune date pour votre trajet</string>
    <string name="Date">Votre date de départ est : </string>
    <string name="price">Prix</string>
    <string name="hour">Heure</string>
    <string name="publish">Publier</string>
    <string name="Acceuil">Acceuil</string>
    <string name="MonCompte">Mon Compte</string>
    <string name="SelectPicture">Sélectionner une photo</string>
    <string name="imageError">Erreur</string>

    /***** Main Acitvity *****\
    <string name="buttonSearch">Rechercher</string>
    <string name="Propose">Proposer un trajet</string>
    <string name="Account">Connexion</string>
    <string name="NewAccout">Créer un compte</string>

    /***** Signup Acitvity *****\
    <string name="Logout">Deconnexion</string>

    /***** Signup Acitvity *****\
    <string name="Mail">Indiquer votre mail</string>
    <string name="Pseudo">NOM Prénom</string>
    <string name="EmptyMail">Veuillez indiquer votre E-Mail</string>
    <string name="Password">Indiquer votre mot de passe</string>
    <string name="EmptyPassword">Veuillez indiquer votre mot de passe</string>
    <string name="Valider">Valider la création de votre compte</string>
    <string name="ConnexionFailed">Authentication impossible.</string>
    <string name="Progress">Connexion en cours</string>
    <string name="SignIn">Vous possédez déjà un compte ? Cliquer ici</string>
    <string name="SignUp">Pas encore de compte ? Cliquer ici</string>

</resources>
