<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_itinerary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.wcs.blablawild.SearchItineraryActivity">

    <TextView
        android:text="@string/departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="22dp"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSearchDeparture"
        android:layout_alignLeft="@+id/editTextSearchDeparture"
        android:layout_alignStart="@+id/editTextSearchDeparture"
        android:layout_marginTop="16dp"
        android:id="@+id/textView3" />

    <TextView
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSearchDestination"
        android:layout_alignLeft="@+id/editTextSearchDestination"
        android:layout_alignStart="@+id/editTextSearchDestination"
        android:layout_marginTop="18dp"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextSearchDeparture"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:selectAllOnFocus="false"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextSearchDestination"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignRight="@+id/editTextSearchDeparture"
        android:layout_alignEnd="@+id/editTextSearchDeparture" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="datetime"
        android:ems="10"
        android:id="@+id/editTextSearchDate"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignRight="@+id/editTextSearchDestination"
        android:layout_alignEnd="@+id/editTextSearchDestination" />

    <Button
        android:text="@string/buttonSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/buttonButtonSearch"
        android:layout_below="@+id/editTextSearchDate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
